[NO-JIRA] Fix overflowing docs pages on mobile devices

--- a/packages/bpk-mixins/src/mixins/_typography.scss
+++ b/packages/bpk-mixins/src/mixins/_typography.scss
@@ -591,6 +591,11 @@
 
 @mixin bpk-table__cell {
   padding: $bpk-spacing-sm;
+  overflow: auto;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 /// Table head cell. Modifies the bpk-table__cell mixin.
